[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.10"
chrono = { version = "0.4.44", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem", "ecdsa"] }
rand = { version = "0.10.0", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
sha256 = "1.6.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
uint = "0.10.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
