[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { version = "0.1.0", path = "../lib" }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
cursive = "0.21.1"
futures = "0.3.32"
kanal = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
text-to-ascii-art = "0.1.10"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
toml = "1.1.2"
